Added the Test runner class

--- a/gs-task/pom.xml
+++ b/gs-task/pom.xml
@@ -45,6 +45,13 @@
 			<version>7.10.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>7.17.0</version>
+    <scope>test</scope>
+</dependency>
+
 	</dependencies>
 
 </project>
